--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-flip-move": "^3.0.5",
     "react-glider": "^5.0.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.2.0",
     "shadcn-ui": "^0.9.5",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5"
